# diffsol-js

./: Cargo.toml  README.md
diffsol-wasm/: Cargo.toml
diffsol-wasm/src/: error.rs  lib.rs
diffsol/src/: lib.rs
diffsol/src/linear_solver/: mod.rs
