[package]
name = "diffsol-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JavaScript/WASM bindings for diffsol with callback support"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
diffsol = { path = "../diffsol", default-features = false, features = ["nalgebra"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
nalgebra = "0.34.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
